# com.github.lunarmodules-luasql

./: .build  .build.sh  .build04_artefacts.sh  .build_common.sh  .lxc_build_artefacts.sh  .lxc_build_ubuntu_1404_x64.sh  .lxc_build_ubuntu_1404_x86.sh  .lxc_build_ubuntu_1604_x64.sh  .lxc_build_ubuntu_1604_x86.sh  .lxc_build_ubuntu_1610_x64.sh  .lxc_build_ubuntu_1610_x86.sh  .lxc_build_ubuntu_1704_x64.sh  .lxc_build_ubuntu_1704_x86.sh  .lxc_build_ubuntu_1710_x64.sh  .lxc_build_ubuntu_1710_x86.sh  .lxc_build_windows.sh  CMakeLists.txt  Jenkinsfile  build_artifact.py  dependency-log-lua5.1.xml  dependency-log-lua5.4.xml  dependency-log.xml
.github/workflows/: main.yml
cmake/: muhkuh_lua.cmake
cmake/tests/: mingw_dll_dependencies.py
cmake/tools/: apply_patches.py
installer/ivy/: CMakeLists.txt
installer/ivy/luasql/: CMakeLists.txt  install.xml  ivy.xml
jonchki/: jonchkicfg.xml
luasql/: CMakeLists.txt  README.txt
luasql/copy_over/: CMakeLists.txt
luasql/installer/lua5.1/: CMakeLists.txt  install.lua  install_windows.lua  luasql.xml
luasql/installer/lua5.2/: CMakeLists.txt  install.lua  install_linux.lua  luasql.xml
luasql/installer/lua5.3/: CMakeLists.txt  install.lua  luasql.xml
luasql/installer/lua5.4/: luasql.xml
luasql/mysql/: CMakeLists.txt
luasql/mysql/installer/lua5.1/: install_linux.lua  install_windows.lua  luasql-mysql.xml
luasql/mysql/installer/lua5.4/: luasql-mysql.xml
luasql/postgres/: CMakeLists.txt
luasql/postgres/installer/lua5.1/: install_linux.lua  luasql-postgres.xml
luasql/postgres/installer/lua5.4/: install_windows.lua  luasql-postgres.xml
luasql/sqlite3/: CMakeLists.txt
luasql/sqlite3/installer/lua5.1/: install_linux.lua  install_windows.lua  luasql-sqlite3.xml
luasql/sqlite3/installer/lua5.4/: luasql-sqlite3.xml
